--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  href="./public/css/style.css">
+    <link rel="stylesheet" href="./public/css/style.css">
 
     <title>Document</title>
 </head>
@@ -17,12 +17,46 @@
 
 
 
-    <main>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
 
 
+<main>
+        <section class="partners">
+            <div class="txtPartners">
+                <p>partners</p>
+                <h1>We're Working With</h1>
+            </div>
+            <div class="imgPartners">
+                <div><img src="./public/source/image/slider-item-img1.png" alt=""></div>
+                <div><img src="./public/source/image/slider-item-img2.png" alt=""></div>
+                <div><img src="./public/source/image/slider-item-img3.png" alt=""></div>
+                <div><img src="./public/source/image/slider-item-img4.png" alt=""></div>
+                <div><img src="./public/source/image/slider-item-img5.png" alt=""></div>
+                <div><img src="./public/source/image/slider-item-img6.png" alt=""></div>
+            </div>
 
-        
-    </main>
+        </section>
+
+
+</main>
 
 
 
