--- a/index.html
+++ b/index.html
@@ -3,17 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  href="./public/css/style.css">
-
+    <link rel="stylesheet" href="./public/css/style.css">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <nav> </nav>
-        <div></div>
-        <div></div>
-    </header>
+        <nav>
+            <div class="logoNav"><img src="../Amin_Fourat_projet/public/source/image/logo-img.png"></div>
+        
+            <div class="menuNav">
+                <a href="#">Home</a>
+                <a href="#">About us</a>
+                <a href="#">Services</a> 
+                <a href="#">Pricing</a>
+                <a href="#">Team</a>
+                <button>Contact us</button>
+            </div>    
+        </nav>
+        
+        <div class="infoHead">
+            <div class="infoCybersec">
+                <h1>24/7Cybersecurity<br>OperationCenter</h1>
+                <p>Dolor sit amet consectetur adipisicing elit sed do eiusmod tempor<br>incididunt ut labore et dolore magna aliqua.</p>
 
+                <div>
+                    <button>Get started</button>
+                    <button id="btnFond">Contact us</button>
+                </div>
+            </div>
+
+        <div class="imgBannerHead">
+            <img src="./public/source/image/banner-right-img.png">
+        </div>
+
+
+    </header>
 
 
 
