--- a/index.html
+++ b/index.html
@@ -17,18 +17,17 @@
                 <a href="#">Services</a> 
                 <a href="#">Pricing</a>
                 <a href="#">Team</a>
-                <button>Contact us</button>
+                <a href="" id="btnContact">Contact us</a>
             </div>    
         </nav>
         
         <div class="infoHead">
             <div class="infoCybersec">
-                <h1>24/7Cybersecurity<br>OperationCenter</h1>
+                <h1>24/7 Cybersecurity<br>OperationCenter</h1>
                 <p>Dolor sit amet consectetur adipisicing elit sed do eiusmod tempor<br>incididunt ut labore et dolore magna aliqua.</p>
-
-                <div>
-                    <button>Get started</button>
-                    <button id="btnFond">Contact us</button>
+                <div class="bntHeader">
+                    <a href="" id="btnStart">Get started</a>
+                    <a href="" id="btnFond">Contact us</a>
                 </div>
             </div>
 
