--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="infoHead">
             <div class="infoCybersec">
                 <h1>24/7 Cybersecurity<br>OperationCenter</h1>
-                <p>Dolor sit amet consectetur adipisicing elit sed do eiusmod tempor<br>incididunt ut labore et dolore magna aliqua.</p>
+                <p id="paraCyber">Dolor sit amet consectetur adipisicing elit sed do eiusmod tempor<br>incididunt ut labore et dolore magna aliqua.</p>
                 <div class="bntHeader">
                     <a href="" id="btnStart">Get started</a>
                     <a href="" id="btnFond">Contact us</a>
