--- a/index.html
+++ b/index.html
@@ -21,6 +21,91 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <section class="whatWeDo">
+            <div class="txtWhatWeDo">
+                <p>WHAT WE DO</p>
+                <h1>Complete And Effective Protection For <br> Your Home And Office</h1>
+            </div>
+            <div class="imgWhatWeDo">
+                <div class="card"><img src="./public/source/image/Effective-sec-item-img1.png"> <p> Camera<br> Surveillance</p> <p>Dolor in reprehenderit aolore eu fugiat nulla non proident sunt in laborum incidun.</p> </div>
+                <div class="card"><img src="./public/source/image/Effective-sec-item-img2.png"><p> Folder <br>Security</p> <p>Dolor in reprehenderit aolore eu fugiat nulla non proident sunt in laborum incidun.</p></div>
+                <div class="card"><img src="./public/source/image/Effective-sec-item-img3.png"> <p>End to End <br>Encryption</p> <p>Dolor in reprehenderit aolore eu fugiat nulla non proident sunt in laborum incidun.</p></div>
+                <div class="card"><img src="./public/source/image/Effective-sec-item-img4.png"><p> Finger Print <br> Security</p> <p>Dolor in reprehenderit aolore eu fugiat nulla non proident sunt in laborum incidun.</p></div>
+            </div>
+            <a href="#" id="btnStart">Get started</a>
+        </section>
+
+
         
     </main>
 
