update the html, wrong html last commit

--- a/index.html
+++ b/index.html
@@ -91,19 +91,33 @@
 
 
 
-        <section class="whatWeDo">
-            <div class="txtWhatWeDo">
-                <p>WHAT WE DO</p>
-                <h1>Complete And Effective Protection For <br> Your Home And Office</h1>
+        <section class="getInTouch">
+            <div class="txtGetInTouch">
+                <p>GET IN TOUCH</p>
+                <h1>Send us a Message</h1>
             </div>
-            <div class="imgWhatWeDo">
-                <div class="card"><img src="./public/source/image/Effective-sec-item-img1.png"> <p> Camera<br> Surveillance</p> <p>Dolor in reprehenderit aolore eu fugiat nulla non proident sunt in laborum incidun.</p> </div>
-                <div class="card"><img src="./public/source/image/Effective-sec-item-img2.png"><p> Folder <br>Security</p> <p>Dolor in reprehenderit aolore eu fugiat nulla non proident sunt in laborum incidun.</p></div>
-                <div class="card"><img src="./public/source/image/Effective-sec-item-img3.png"> <p>End to End <br>Encryption</p> <p>Dolor in reprehenderit aolore eu fugiat nulla non proident sunt in laborum incidun.</p></div>
-                <div class="card"><img src="./public/source/image/Effective-sec-item-img4.png"><p> Finger Print <br> Security</p> <p>Dolor in reprehenderit aolore eu fugiat nulla non proident sunt in laborum incidun.</p></div>
-            </div>
-            <a href="#" id="btnStart">Get started</a>
-        </section>
+            <div class="form">
+                    <div class="champsForm">
+                        <input type="text" id="name" placeholder="Name">
+                    </div>
+                    <div class="champsForm">
+                        <input type="email" id="email" placeholder="Email">
+                    </div>
+                    <div class="champsForm">
+                        <input type="tel" id="phone"  placeholder="Phone">
+                    </div>
+                    <div class="champsArea">
+                        <textarea id="message" rows="4"  placeholder="Message"></textarea>
+                    </div>
+
+                </div>
+
+                    <div class="btnSubmit">
+                        <a href="" id="btnContact">Submit</a>
+                    </div>
+            
+                </form>
+        </section> 
 
 
         
