--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  href="./public/css/style.css">
+   <link rel="stylesheet" href="./public/css/style.css">
 
     <title>Document</title>
 </head>
@@ -31,6 +31,41 @@
 
 
     <footer>
+        <div class="footerTop"> 
+            <div class="logoFooter">
+                <div><img src="./public/source/image/logo-img.png" alt=""></div>
+                <div> <p>Deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati rupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi..
+                    </p></div>
+            </div>
+            <div class="aboutFooter"> 
+                <ul>
+                    <li><h3>About Us</h3></li>
+                    <li>About us</li>
+                    <li> Services</li>
+                    <li>Pricing</li>
+                    <li> Team</li>
+                    <li> Contact us</li>
+                </ul>
+            </div>
+            <div class="servicesFooter">
+                <h3> Our Services </h3>
+                <p>121 King Street Melbourne,<span>
+                    3000,Australia
+                </span></p>
+                <a href="mailto:info@molengeek.com">info@molengeek.com</a>
+
+                <a href="tel:+1 23 45 6789">+1 23 45 6789</a>
+
+                <div> 
+                    <img src="./public/source/image/facebook-f (2).svg" alt="">
+                    <img src="./public/source/image/twitter.svg" alt="">
+                    <img src="./public/source/image/instagram.svg" alt="">
+                </div>
+            </div>
+            <div></div>
+        </div>
+     
+        <div></div>
 
     </footer>
 
