add Footer final

--- a/index.html
+++ b/index.html
@@ -56,16 +56,30 @@
 
                 <a href="tel:+1 23 45 6789">+1 23 45 6789</a>
 
-                <div> 
+                <div class="resaux"> 
                     <img src="./public/source/image/facebook-f (2).svg" alt="">
                     <img src="./public/source/image/twitter.svg" alt="">
                     <img src="./public/source/image/instagram.svg" alt="">
                 </div>
             </div>
-            <div></div>
+            <div class="neuwsletter">
+                <h3>Newsletter</h3>
+                <div class="send">               
+                <input type="text" id="enter" placeholder="Enter your email"> 
+                <button id="submit"><img src="./public/source/image/submit-img.png" alt=""></button> 
+            </div> 
+                <div class="agreeFooter">
+                 <button type="button"></button>
+                 <p>I Agree to the Terms</p>
+                </div>
+            </div>
         </div>
      
-        <div></div>
+        <div class="footerBottom"> 
+            <p>Copyright Molenstars &#169; 2022. All Rights Reserved.
+            </p>
+        
+        </div>
 
     </footer>
 
