add commit partners

--- a/index.html
+++ b/index.html
@@ -37,8 +37,15 @@
   
   
 
-
 <main>
+
+
+
+
+
+
+
+    <!-- section Partners -->
         <section class="partners">
             <div class="txtPartners">
                 <p>partners</p>
