add commit WhoweAre

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
 
 
-
+ <!-- section whoWeAre -->
     <section class="whoWeAre">
         <div class="imgWhoWeAre"><img src="./public/source/image/informationmain-left-sec-img.png" alt=""></div>
         <div class="txtWhoWeAre">
