--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+
+<!-- section header -->
+
     <header>
         <nav>
             <div class="logoNav"><img src="../Amin_Fourat_projet/public/source/image/logo-img.png"></div>
