add section comment

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
 
 
- 
-    <main>
 
+    <main>
+        <!-- section WhatWeDo -->
         <section class="whatWeDo">
             <div class="txtWhatWeDo">
                 <p>WHAT WE DO</p>
