--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
         </div>
         <div class="servicesFooter">
             <h3> Our Services </h3>
-            <p>121 King Street Melbourne,<span>
+            <p>121 King Street Melbourne,<br>
                 3000,Australia
-            </span></p>
+            </p>
             <a href="mailto:info@molengeek.com">info@molengeek.com</a>
 
             <a href="tel:+1 23 45 6789">+1 23 45 6789</a>
